@@ -47,6 +47,8 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 	private int length;
 	private int time;
 
+	private int previousTime = -1;
+
 	private boolean applyWorkaround = false;
 	private boolean workaroundApplied;
 
@@ -62,7 +64,7 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 	private IFileManager fileManager;
 
 	boolean isReadStopped() {
-		return readStopped;
+		return this.readStopped;
 	}
 
 	/**
@@ -118,9 +120,20 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 		// MPlayer bug: Duration still inaccurate with mp3 VBR files! Flac
 		// duration bug
 		if (line.contains(ANS_TIME_POSITION) && !this.readStopped) {
-			setTime((int) (Float
-					.parseFloat(line.substring(line.indexOf('=') + 1)) * 1000.0));
-			getEngine().setTime(getTime());
+			int time = calculateTime(line);
+			if (timeIsTheSame(time)) {
+				// Playback finished
+				// This is a workaround for MPlayer2 process where instead of an
+				// EOF pattern
+				// time does not change with different calls to retrieve
+				// position
+				Logger.info("MPlayer2 workaround to stop process");
+				stopRead();
+				getEngine().currentAudioObjectFinished();
+			} else {
+				setTime(time);
+				getEngine().setTime(getTime());
+			}
 		}
 
 		// End
@@ -145,6 +158,14 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 						.currentAudioObjectFinishedWithError(generateError());
 			}
 		}
+	}
+
+	private boolean timeIsTheSame(final int time) {
+		return time == this.previousTime;
+	}
+
+	private int calculateTime(final String line) {
+		return (int) (Float.parseFloat(line.substring(line.indexOf('=') + 1)) * 1000.0);
 	}
 
 	private void stopRead() {
@@ -174,9 +195,9 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 		}
 	}
 
-	private void controlAndProcess(BufferedReader in) throws IOException,
+	private void controlAndProcess(final BufferedReader in) throws IOException,
 			InterruptedException {
-		while (!readStopped && !this.applyWorkaround && !isInterrupted()) {
+		while (!this.readStopped && !this.applyWorkaround && !isInterrupted()) {
 			sendCommand();
 			waitForResponse(in);
 			List<String> response = getResponse(in);
@@ -191,14 +212,15 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 		}
 	}
 
-	private void waitForResponse(BufferedReader in) throws IOException,
+	private void waitForResponse(final BufferedReader in) throws IOException,
 			InterruptedException {
 		while (!isInterrupted() && !in.ready()) {
 			Thread.sleep(400);
 		}
 	}
 
-	private List<String> getResponse(BufferedReader in) throws IOException {
+	private List<String> getResponse(final BufferedReader in)
+			throws IOException {
 		List<String> response = new ArrayList<String>();
 		while (in.ready()) {
 			String line = in.readLine();
@@ -240,6 +262,7 @@ abstract class AbstractMPlayerOutputReader extends Thread {
 	}
 
 	protected final void setTime(final int time) {
+		this.previousTime = this.time;
 		this.time = time;
 	}
 
